tests/rosetta/out/Go/bitmap-bresenhams-line-algorithm.error
parse error: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/bitmap-bresenhams-line-algorithm.mochi:1:1: lexer: invalid input text "# Mochi implemen..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitmap-bresenhams-line-algorithm.mochi:1:1

  1 | # Mochi implementation of Bresenham's line algorithm
    | ^

help:
  String literals must be properly closed with a `"`.